fix css z-index logo

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ padding-left:140px
 .branding {
 height: 65px;
 width: 120px;
-position: absolute;
+position: fixed;
 z-index: 20000;
 background: url("img/logo.png") no-repeat scroll 0 top transparent;
 display: block;	
@@ -149,7 +149,6 @@ height: 120px;
 width: 200px;
 background: url("img/cloud-left.png") no-repeat scroll 0 top transparent;
 position: absolute;
-z-index: 20000;
 display: block;
 float: left;
 overflow: visible;
